--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
       </li>
 	  <li><a >我的游戏</a>
         <ul class="sub-nav">
-          <li><a href="">英雄联盟（待开发）</a></li>
+          <li><a href="lol01.html">英雄联盟</a></li>
           <li><a href="ow01.html">守望先锋</a></li>
-          <li><a href="">绝地求生（待开发）</a></li>
+          <li><a href="pubg01.html">绝地求生</a></li>
         </ul>
       </li>
       <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a> </li>
@@ -67,7 +67,7 @@
 </header>
 <div class="pagebg ab"> </div>
 <div class="container">
-  <h1 class="t_nav"><span>没有座右铭，就是我的座右铭。</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">关于我</a></h1>
+  <h1 class="t_nav"><span>且随疾风前行，身后亦须留心。吾虽浪迹天涯，却未迷失本心。</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">关于我</a></h1>
   <div class="news_infos">
     <ul>
       <p><strong>高东旭</strong>，阴历95年，阳历96年，沉着冷静摩羯男。<br />
