--- a/code02.html
+++ b/code02.html
@@ -54,9 +54,9 @@
       </li>
 	  <li><a >我的游戏</a>
         <ul class="sub-nav">
-          <li><a href="">英雄联盟（待开发）</a></li>
+          <li><a href="lol01.html">英雄联盟</a></li>
           <li><a href="ow01.html">守望先锋</a></li>
-          <li><a href="">绝地求生（待开发）</a></li>
+          <li><a href="pubg01.html">绝地求生</a></li>
         </ul>
       </li>
       <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a> </li>
@@ -107,7 +107,7 @@
 
 <p>项目文件如下： <br>
 </p><br><div align="center"> <br>
-<img src="https://img-blog.csdn.net/20171109162654854" alt="这里写图片描述" title=""></div><p></p><br>
+<img src="images/code/servlet1.jpg" alt="" title=""></div><p></p><br>
 
 <hr>
 
@@ -185,7 +185,7 @@
 <br><h3 id="5webxml配置"><strong>5、web.xml配置</strong></h3><br>
 <div align="center"></div><p></p><br>
 
-<p><img src="https://img-blog.csdn.net/20171109163655337" alt="这里写图片描述" title=""></p><br>
+<p><img src="images/code/servlet2.jpg" alt="" title=""></p><br>
 
 <hr>
 
@@ -193,7 +193,7 @@
 
 <p><strong>Eclipse</strong>会自动弹出一个浏览器，效果如图： <br>
 </p><br><div align="center"> <br>
-<img src="https://img-blog.csdn.net/20171109163834703" alt="这里写图片描述" title=""></div><p></p><br>
+<img src="images/code/servlet3.jpg" alt="" title=""></div><p></p><br>
 
 <hr>
 
@@ -290,7 +290,7 @@
 
 <br><h3 id="8http测试结果"><strong>8、http测试结果</strong></h3><br>
 <div align="center"> <br>
-<img src="https://img-blog.csdn.net/20171109164802978" alt="这里写图片描述" title=""></div><p></p><br>
+<img src="images/code/servlet4.jpg" alt="" title=""></div><p></p><br>
 
 <hr>
 
@@ -306,15 +306,15 @@
 <br><h5 id="10tomcat汤姆猫喵"><strong>10、Tomcat？汤姆猫？喵~</strong></h5><br>
 
 <p></p><br><div align="center"> <br>
-<img src="https://img-blog.csdn.net/20171109165509653" alt="这里写图片描述" title=""></div><p></p><br> 
+<img src="images/code/servlet5.jpg" alt="" title=""></div><p></p><br> 
 	<!--content end-->
 	  </div>
 	</div>	
     <div class="nextinfo">
-      <p>上一篇：<a href="code01.html">TextRank算法抽取关键词</a></p><br><br>
-      <p>下一篇：<a href="" title="??">无</a></p><br><br>
-      <p> </p><br><br>
-      <p> </p><br><br>
+      <p>上一篇：<a href="code01.html">TextRank算法抽取关键词</a></p>
+      <p>下一篇：<a href="" title="??">无</a></p>
+      <p> </p>
+      <p> </p>
     </div>
   </div>
   <div class="sidebar">
