--- a/ow01.html
+++ b/ow01.html
@@ -54,9 +54,9 @@
       </li>
 	  <li><a >我的游戏</a>
         <ul class="sub-nav">
-          <li><a href="">英雄联盟（待开发）</a></li>
+          <li><a href="lol01.html">英雄联盟</a></li>
           <li><a href="ow01.html">守望先锋</a></li>
-          <li><a href="">绝地求生（待开发）</a></li>
+          <li><a href="pubg01.html">绝地求生</a></li>
         </ul>
       </li>
       <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a> </li>
@@ -83,8 +83,12 @@
       <div class="news_con">
 		<!--content start-->
 		<center>
+		<br>
+		我的ID：十乂#5371
+		<br><br>
+        <img alt="" src="images/game/ow01.jpg"><br>
         <br>
-        <img alt="" src="images/game/ow01.png"><br>
+        <img alt="" src="images/game/yuanshi01.png"><br>
 		<br>
 		<video width="100%" height="100%" controls>
 		<source src="videos/17-12-04" type="video/mp4">
