--- a/poem5.html
+++ b/poem5.html
@@ -54,9 +54,9 @@
       </li>
 	  <li><a >我的游戏</a>
         <ul class="sub-nav">
-          <li><a href="">英雄联盟（待开发）</a></li>
+          <li><a href="lol01.html">英雄联盟</a></li>
           <li><a href="ow01.html">守望先锋</a></li>
-          <li><a href="">绝地求生（待开发）</a></li>
+          <li><a href="pubg01.html">绝地求生</a></li>
         </ul>
       </li>
       <li><a href="https://blog.csdn.net/qq_29591261" >CSDN博客</a> </li>
