--- a/pubg01.html
+++ b/pubg01.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>捉迷藏</title>
+<title>绝地求生</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,98 +66,43 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 捉迷藏</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的游戏 > 绝地求生 </span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">绝地求生</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">捉迷藏</h3>
-      <div class="bloginfo" style="text-align:center;">
+      <h3 class="news_title" style="text-align:center;">绝地求生</h3>
+      <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
-          <li class="lmname">不诉离殇</li>
+          <li class="author">RKYBoy</li>
+          <li class="lmname">被外挂杀</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
-      <div class="news_con" style="text-align:center;">
+ 
+      <div class="news_con">
 		<!--content start-->
-        
-		<div class="news_about" style="text-align:center;">一。灰膏墙，柳伴杨，青石板，泥土巷</div>
-		巷头渠水轻轻流
-		清澈如你明眸<br>
-		谁家的女儿不知羞<br>
-		一双玉足浣水流<br>
-		<br>
-		莫问是谁家的姑娘<br>
-		扰了这鱼儿的安详<br>
-		为免去鱼儿的灾殃<br>
-		姑娘，可愿与我捉迷藏<br>
-
-		<div class="news_about" style="text-align:center;">二。捉迷藏，捉迷藏，麦田里，草垛旁</div>
-		踩到花儿你的眼凝伤<br>
-		纤细的手托住芬芳<br>
-		随着足迹寻你到路旁<br>
-		你与花同香<br>
-		<br>
-		你匆忙躲藏<br>
-		留下飘散的芳香<br>
-		我叩问姑娘在不在<br>
-		你说着不在不在，却笑出了声响<br>
-
-		<div class="news_about" style="text-align:center;">三。酸里红，棒棒糖，小姑娘，别心伤</div>
-		明个儿还来这个地方<br>
-		一准叫你当大王<br>
-		你的开心快乐模样<br>
-		在浅浅酒窝中荡漾<br>
-		<br>
-		夕阳悠悠暖巷<br>
-		在黄昏红了脸庞<br>
-		草垛搭起的红纱帐<br>
-		姑娘你不要遗忘<br>
-
-		<div class="news_about" style="text-align:center;">四。泥土巷，黄月亮，南风起，尘飞扬</div> 
-		那里有什么风光<br>
-		让你走向了远方<br>
-		大大小小行囊<br>
-		也不怕累了肩膀<br>
-		<br>
-		噫语静静流淌<br>
-		在夜里湿了脸庞<br>
-		深夜不能眠<br>
-		花香飘到了梦乡<br>
-
-		<div class="news_about" style="text-align:center;">五。天涯上，有断肠，断桥上，人彷徨</div> 
-		夕阳白雪的掩映<br>
-		被风吹散的叮咛<br>
-		敢问桥边那棵望月枫<br>
-		可如我一般痴情<br>
-		<br>
-		有情问山山也不明<br>
-		白杨有绿柳<br>
-		花影洒满径<br>
-		哪还有故人心<br>
-
-		<div class="news_about" style="text-align:center;">六。捉迷藏，去哪里，这一场，败给你</div> 
-		认输可不可以<br>
-		回来可不可以<br>
-		愿天降一场葬花雨<br>
-		葬掉那不经意的期许<br>
-		<br>
-		无限相思思哪里<br>
-		做一帘幽梦<br>
-		听一席春雨<br>
-		独独少一个你<br>
-		<br>
 		<center>
-        <img alt="" src="images/poem/43.jpg"><br>
+		<br>
+		我的ID：RKYBoy
+		<br>
+        <img alt="" src="images/game/pubg01.jpg"><br>
+		<br>
+		被外挂杀的一幕
+		<br><br>
+		<video width="100%" height="100%" controls>
+		<source src="videos/pubg_wg01.mp4" type="video/mp4">
+		<object data="videos/pubg_wg01.mp4" width="100%" height="100%">
+		</object> 
+		</video>
+		<br><br><br>
 		</center>
-        <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem42.html" title="鱼水情">鱼水情</a></p>
-      <p>下一篇：<a href="poem44.html" title="每一句都是谎言">每一句都是谎言</a></p>
+      <p>上一篇：<a>无</a></p>
+      <p>下一篇：<a>无</a></p>
       <p> </p>
       <p> </p>
     </div>
@@ -166,17 +111,27 @@
     <div class="cloud">
       <h2 class="hometitle">标签云</h2>
       <ul>
-        <a href="poem01.html">遇见花开</a>
-		<a href="poem02.html">人生如梦</a> 
-		<a href="poem51.html">还记得</a>
-        <a href="poem54.html">静夜思</a> 
-        <a href="poem31.html">埋葬柔情</a> 
-		<a href="poem61.html">一一〇七</a> 
-		<a href="poem44.html">每一句都是谎言</a> 
-		<a href="poem4.html">不诉离殇</a>
-		<a href="poem5.html">孤单成瘾</a>
-		<a href="poem42.html">鱼水情</a>
-		<a href="poem43.html">捉迷藏</a>
+        <a >M416</a> 
+        <a >Kar98K</a> 
+        <a >AWM</a> 
+        <a >M24</a> 
+        <a >SCAR-L</a> 
+        <a >M16A4</a> 
+        <a >AKM</a> 
+        <a >UMP9</a> 
+        <a >UZI</a> 
+        <a >S686</a> 
+        <a >S1897</a> 
+        <a >S12K</a> 
+        <a >Vector</a> 
+        <a >M249</a> 
+        <a >P18C</a> 
+        <a >GROZA</a> 
+        <a >SKS</a> 
+        <a >VSS</a> 
+        <a >汤姆逊</a> 
+        <a >十字弩</a> 
+        <a >吉利服</a> 
       </ul>
     </div>
     <div class="guanzhu" id="float">
