--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	
 	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
       <h3 class="blogtitle"><a href="ow01.html">守望先锋</a></h3>
-      <span class="blogpic"><a href="ow01.html" title=""><img src="images/game/ow01.png" alt=""></a></span>
+      <span class="blogpic"><a href="ow01.html" title=""><img src="images/game/ow0.jpg" alt=""></a></span>
       <p class="blogtext"><br><br>
 	  </p>
       <div class="bloginfo">
@@ -215,6 +215,22 @@
     </div>
 	
 	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+      <h3 class="blogtitle"><a href="lol01.html">英雄联盟</a></h3>
+      <span class="blogpic"><a href="lol01.html" title=""><img src="images/game/lol0.jpg" alt=""></a></span>
+      <p class="blogtext"><br><br>
+	  </p>
+      <div class="bloginfo">
+        <ul>
+          <li class="author">丿神鬼妖仙</li>
+          <li class="lmname">五杀</li>
+          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="view">99已阅读</li>
+          <li class="like">99</li>
+        </ul>
+      </div>
+    </div>
+	
+	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
       <h3 class="blogtitle"><a href="poem45.html" >寂夜</a></h3>
       <span class="blogpic"><a href="poem45.html" title=""><img src="images/poem/45.jpg" alt=""></a></span>
       <p class="blogtext">别让夜晚再沉睡<br>
@@ -242,6 +258,22 @@
         <ul>
           <li class="author">文青</li>
           <li class="lmname">不诉离殇</li>
+          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="view">99已阅读</li>
+          <li class="like">99</li>
+        </ul>
+      </div>
+    </div>
+	
+	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+      <h3 class="blogtitle"><a href="pubg01.html">绝地求生</a></h3>
+      <span class="blogpic"><a href="pubg01.html" title=""><img src="images/game/pubg0.jpg" alt=""></a></span>
+      <p class="blogtext"><br><br>
+	  </p>
+      <div class="bloginfo">
+        <ul>
+          <li class="author">RKYBoy</li>
+          <li class="lmname">吃鸡</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
