--- a/lol01.html
+++ b/lol01.html
@@ -82,10 +82,9 @@
  
       <div class="news_con">
 		<!--content start-->
-		<center><br>
-		我的ID：丿神鬼妖仙<br>
-		我的大区：比尔吉沃特 艾欧尼亚 扭曲丛林
-		<br><br>
+		<center>
+		<div class="news_about" style="text-align:center;"><strong>我的ID：</strong>丿神鬼妖仙<br>
+		<strong>我的大区：</strong>比尔吉沃特 艾欧尼亚 扭曲丛林</div>
         <br>
         <img alt="" src="images/game/wusha01.jpg"><br>
 		<br>
