--- a/ow01.html
+++ b/ow01.html
@@ -82,10 +82,8 @@
  
       <div class="news_con">
 		<!--content start-->
-		<center>
+		<center><div class="news_about" style="text-align:center;"><strong>我的ID：</strong>十乂#5371</div>
 		<br>
-		我的ID：十乂#5371
-		<br><br>
         <img alt="" src="images/game/ow01.jpg"><br>
         <br>
         <img alt="" src="images/game/yuanshi01.png"><br>
