--- a/pubg01.html
+++ b/pubg01.html
@@ -73,7 +73,7 @@
       <div class="bloginfo">
         <ul>
           <li class="author">RKYBoy</li>
-          <li class="lmname">被外挂杀</li>
+          <li class="lmname">吃鸡</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -82,11 +82,14 @@
  
       <div class="news_con">
 		<!--content start-->
-		<center>
+		<center><div class="news_about" style="text-align:center;"><strong>我的ID：</strong>RKYBoy</div>
+        <img alt="" src="images/game/pubg01.jpg">
 		<br>
-		我的ID：RKYBoy
+		吃鸡一刻
+		<br><br>
+        <img alt="" src="images/game/chiji01.jpg"><br>
 		<br>
-        <img alt="" src="images/game/pubg01.jpg"><br>
+        <img alt="" src="images/game/chiji02.jpg"><br>
 		<br>
 		被外挂杀的一幕
 		<br><br>
