--- a/index.html
+++ b/index.html
@@ -164,22 +164,6 @@
     </div>
 	
 	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="ow01.html">守望先锋</a></h3>
-      <span class="blogpic"><a href="ow01.html" title=""><img src="images/game/ow0.jpg" alt=""></a></span>
-      <p class="blogtext"><br><br>
-	  </p>
-      <div class="bloginfo">
-        <ul>
-          <li class="author">十乂</li>
-          <li class="lmname">源氏</li>
-          <li class="timer">2000-00-00 00:00:00</li>
-          <li class="view">99已阅读</li>
-          <li class="like">99</li>
-        </ul>
-      </div>
-    </div>
-	
-	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
       <h3 class="blogtitle"><a href="poem42.html" >鱼水情</a></h3>
       <span class="blogpic"><a href="poem42.html" title=""><img src="images/poem/42.jpg" alt=""></a></span>
       <p class="blogtext">下雨天<br>
@@ -207,22 +191,6 @@
         <ul>
           <li class="author">文青</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
-          <li class="view">99已阅读</li>
-          <li class="like">99</li>
-        </ul>
-      </div>
-    </div>
-	
-	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="lol01.html">英雄联盟</a></h3>
-      <span class="blogpic"><a href="lol01.html" title=""><img src="images/game/lol0.jpg" alt=""></a></span>
-      <p class="blogtext"><br><br>
-	  </p>
-      <div class="bloginfo">
-        <ul>
-          <li class="author">丿神鬼妖仙</li>
-          <li class="lmname">五杀</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -266,22 +234,6 @@
     </div>
 	
 	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="pubg01.html">绝地求生</a></h3>
-      <span class="blogpic"><a href="pubg01.html" title=""><img src="images/game/pubg0.jpg" alt=""></a></span>
-      <p class="blogtext"><br><br>
-	  </p>
-      <div class="bloginfo">
-        <ul>
-          <li class="author">RKYBoy</li>
-          <li class="lmname">吃鸡</li>
-          <li class="timer">2000-00-00 00:00:00</li>
-          <li class="view">99已阅读</li>
-          <li class="like">99</li>
-        </ul>
-      </div>
-    </div>
-	
-	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
       <h3 class="blogtitle"><a href="poem52.html" >能够遗忘，才不悲伤</a></h3>
       <span class="blogpic"><a href="poem52.html" title=""><img src="images/poem/52.jpg" alt=""></a></span>
       <p class="blogtext">云朵四处游荡<br>
@@ -301,7 +253,24 @@
 	
   </div>
   <!--blogsbox end-->
+
   <div class="sidebar">
+
+    <div class="zhuanti">
+      <h2 class="hometitle">我的游戏</h2>
+      <ul>
+        <li> <i><img src="images/game/lol0.jpg"></i>
+          <p>英雄联盟<span><a href="lol01.html">看一看</a></span> </p>
+        </li>
+        <li> <i><img src="images/game/ow0.jpg"></i>
+          <p>守望先锋 <span><a href="ow01.html">看一看</a></span></p>
+        </li>
+        <li> <i><img src="images/game/pubg0.jpg"></i>
+          <p>绝地求生<span><a href="pubg01.html">看一看</a></span></p>
+        </li>
+      </ul>
+    </div>
+  
     <div class="cloud">
       <h2 class="hometitle">标签云</h2>
       <ul>
