--- a/poem61.html
+++ b/poem61.html
@@ -83,7 +83,7 @@
 		<!--content start-->
         <br>
 		宫中不胜那广寒，嫦娥姐姐来下凡。
-		<br><br>寂月无雨，未知雨佳（赵雨佳）。一章雨过（张雨），清新无沙（吴莎）。纤手擢雨荷（陈雨贺），舒眉观贾叶（贾叶）。簇从含蕾子（赵蕾），娇嫩不向秸（郭向杰）。杨子濛濛（子蒙），木茜芃芃（靳茜芃），晓风刻蓬（亢克鹏）。笋芽欲萌（马玉萌）。茁壮荪圃（孙璞），浩渺卓府（李卓府）。雨泽万物（刘宇泽），此乃天福（米天福）。故其言曰（曹琪岩）：“真佳雨也（支佳羽）。”
+		<br><br>寂月无雨，未知雨佳（赵雨佳）。一章雨过（张雨），清新无沙（吴莎）。纤手擢雨荷（陈雨贺），舒眉观贾叶（贾叶）。簇从含蕾子（赵蕾），娇嫩不向秸（郭向杰）。杨子濛濛（子蒙），木茜芃芃（靳茜芃）。晓风刻蓬（亢克鹏），笋芽欲萌（马玉萌）。茁壮荪圃（孙璞），浩渺卓府（李卓府）。雨泽万物（刘宇泽），此乃天福（米天福）。故其言曰（曹琪岩）：“真佳雨也（支佳羽）。”
 		<br><br>夜空一晴（姬一晴），星河翰明（郭翰明）。皓月当空（陶皓月），添几分灵静（吴琳静）；佳萤取次（刘佳莹），争几点启明（张启明）。田野佳宁（田佳宁），绿眸子明（张子明）。蝶舞兴兴（韩兴兴），流光罩影（赵颖）。佳月照满盈（史佳悦），佳星不孤明（暴嘉鑫），处处佳宁（高佳宁）。
 		<br><br>伫立岸头，看百江争流（李江峥）；扁舟航航（张航航），听渔樵声扬（葛声扬）。激流澎湃（刘鹏），江翁成帅（郝成帅）。泛舟银川（白银川），望江思远（刘思远）。远水静红（郭静红），波影憧憧（王冲冲）。撑一支长篙，浪迹逍遥（肖遥）；观大好河山，吾正自豪（郑子豪）。不似李煜许多愁（李昱），会生涟漪心中留（王慧生）。无畏飏堑（杨倩），心予海蓝（王心雨）。请子铭记（乔紫铭），人间彰丽（张丽）。
 		<br><br>深暮红艳（申苜弘），丽染霞天（仇丽冉）。发冠冲旭（王冲旭），身着绮纤（剧启贤）。长笛寒嗥（韩豪），舞一曲霓裳；技宇超群（卢宇超），观烟火膨旺（高鹏旺）。英绝气势（武英珏），泱泱欢之（高欢芝）。人景相煽（相珊），天条欲歉（任玉倩）。时光慢飞（史曼菲），高朋满屋（周高鹏）。换装变服，为人师母。遇班长李博（李博），人才杜冲（杜冲）；更莘莘学子，卧虎藏龙。早起赏东旭（东旭），夜来梦英雄（周梦英）。不张浩浩之势（张浩），不过佳佳之日（邢佳佳）。教诉斌斌之礼（苏斌），渐结珍珍之谊（杨珍珍）。捍天地之伟灵（周玮玲），兴伟国之园丁（李兴伟）。广寒冷，人家宁（张家宁），该何去何从？
