--- a/about.html
+++ b/about.html
@@ -75,14 +75,19 @@
       <h2>专业技能</h2>
         <br />
         本科毕业于<strong>大连理工大学</strong>，专业<strong>软件工程</strong>，主修课程：
-		C、C++、数据结构与算法、计算机组织与结构、编译技术、计算机网络、操作系统、软件项目管理、C#.NET
-		开发、数据库系统、软件工程、UML、系统分析与设计、设计模式、软件开发案例分析、软件测试与质量保证、
+		<strong>C</strong>、<strong>C++</strong>、<strong>数据结构与算法</strong>、计算机组织与结构、编译技术、
+		<strong>计算机网络</strong>、<strong>操作系统</strong>、软件项目管理、C#.NET
+		开发、<strong>数据库系统</strong>、<strong>软件工程</strong>、UML、系统分析与设计、设计模式、软件开发案例分析、软件测试与质量保证、
 		离散数学、可视化与可视化分析、数据库程序设计、网络信息安全 ... ...
 		<br />
 		<br />
-        在北京<strong>凤凰网</strong>实习半年，端茶送水打打杂，顺便负责视频标题关键词提取服务的设计实现和优化；采用 JSP+Tomcat 搭建了各类文本处理算法的展示平台；上线爬取新闻地域识别服务；搭建了各类训练数据与 Kafka 数据库对接的 http 服务；负责词语重要度的计算；定时处理文章质量评分和广告识别日志的服务并把结果写进 Redis 中；定时从百度搜索风云榜爬取热搜词的任务；从 www.poi86.com 上抓取 POI 信息并进行筛选和清洗。<br />
+        在北京<strong>凤凰网</strong>实习半年，端茶送水打打杂，顺便负责视频标题关键词提取服务的设计实现和优化；
+		采用 <strong>JSP+Tomcat</strong> 搭建了各类文本处理算法的展示平台；上线爬取新闻地域识别服务；
+		搭建了各类训练数据与 <strong>Kafka</strong> 数据库对接的 <strong>http</strong> 服务；负责词语重要度的计算；
+		定时处理文章质量评分和广告识别日志的服务并把结果写进 <strong>Redis</strong> 中；
+		定时从百度搜索风云榜<strong>爬取</strong>热搜词的任务；从 www.poi86.com 上抓取 <strong>POI</strong> 信息并进行筛选和清洗。<br />
         <br />
-        其他的，英语六级飘过，office有啥不会的就搜呗。<br />
+        自学了<strong>Java Python HTML JS CSS JSP</strong>等。其他的，英语六级飘过，office有啥不会的就搜呗。<br />
         <br />
 		github主页：https://gaodongxu.github.io/（就是此网站）<br />
 		 CSDN 博客：<a href="https://blog.csdn.net/qq_29591261">https://blog.csdn.net/qq_29591261</a><br />
@@ -94,19 +99,19 @@
         </p>
       <h2>基本信息</h2>
 	  <br />
-	  河北省石家庄市井陉县人。井陉那些事：太行东麓，河北西陲。汉将韩信，背水一战。百团大战，一往无前。千年古县，拉花之乡。（不要提到韩信就想起来王者荣耀的一个刺客(～￣▽￣)～要知道他最著名的就是在井陉的背水一战）<br />
+	  <strong>河北省石家庄市井陉县</strong>人。井陉那些事：太行东麓，河北西陲。汉将韩信，背水一战。百团大战，一往无前。千年古县，拉花之乡。（不要提到韩信就想起来王者荣耀的一个刺客(～￣▽￣)～要知道他最著名的就是在井陉的背水一战）<br />
 	  <br /><center>
 	  <img src="images/jingxing.jpg"></center>
 	  <br />
       <h2>兴趣爱好</h2>
 	  <br />
-	  <p>半个文艺青年&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	  <p><strong>半个文艺青年</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	  诗词歌赋 人生哲学 舞文弄墨 天马行空<br />
-      半个网瘾少年&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <strong>半个网瘾少年</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	  英雄联盟 守望先锋 绝地求生 还有很多<br />
-	  半个技术宅男&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	  <strong>半个技术宅男</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	  这个网站 那个网站 前端后端 大端小端<br />
-	  半个强迫病患&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	  <strong>半个强迫病患</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	  强制对齐 强制对齐 强制对齐 强制对齐<br />
 	  <br />
 	  </p>
