--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>沉默寡言高东旭</title>
+<link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -16,6 +17,7 @@
 <![endif]-->
 </head>
 <body>
+<div style="display:none;"><img src="images/poem/51.jpg" alt=""></div>
 <header> 
   <!--menu begin-->
   <div class="menu">
