--- a/poem5.html
+++ b/poem5.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>孤单成瘾</title>
+<link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
