--- a/anime01.html
+++ b/anime01.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>静夜思</title>
+<title>动漫</title>
+<link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -67,72 +68,31 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 静夜思</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的影视 > 动漫</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">动漫</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">静夜思</h3>
-      <div class="bloginfo" style="text-align:center;">
+      <h3 class="news_title" style="text-align:center;">动漫</h3>
+      <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
-          <li class="lmname">孤单成瘾</li>
+          <li class="author">江南无蝶</li>
+          <li class="lmname">动漫</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
+ 
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-		<br>
-		你说给我听的情话<br>
-		给了我一个天下<br>
-		你走了 这天下坍塌<br>
-		海角淹没了天涯<br>
-		<br>
-		别离的你不会牵挂<br>
-		我也会故作潇洒<br>
-		雪花飘到了那一年春夏<br>
-		妄想把你在记忆中抹擦<br>
-		<br>
-		想念你<br>
-		在每一个夜深人静的夜里<br>
-		你的每一寸呼吸<br>
-		我都难以逃离<br>
-		<br>
-		约定嫁我要穿的红袭衣<br>
-		誓言在黑暗中沉寂<br>
-		衣不再红 天不再碧<br>
-		我用什么来自欺<br>
-		<br>
-		你在南方盛开了花蕊<br>
-		思念把北国的雪融成泪<br>
-		我的心是泼到哈尔滨的水<br>
-		冰冷禁锢了一切一切的美<br>
-		<br>
-		你在他的世界里耀武扬威<br>
-		我在我的世界里万念俱灰<br>
-		只有黑暗在黑夜里沉睡<br>
-		而让我在记忆中沉醉<br>
-		<br>
-		抽泣在枕边静静的淌<br>
-		挤出的泪流经面庞<br>
-		一抹无味的苍凉<br>
-		迷失了不堪的过往<br>
-		<br>
-		我在你身后的地方<br>
-		驻足凝望 转身悲伤<br>
-		默默地看你开心难过模样<br>
-		没有安慰 没有念想<br>
-		<br>
 		<center>
-        <img alt="" src="images/poem/54.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem53.html" title="情圣">情圣</a></p>
-      <p>下一篇：<a href="poem55.html" title="造化弄人">造化弄人</a></p>
+      <p>上一篇：<a>无</a></p>
+      <p>下一篇：<a >无</a></p>
       <p> </p>
       <p> </p>
     </div>
