--- a/anime01.html
+++ b/anime01.html
@@ -40,18 +40,16 @@
         <ul class="sub-nav">
           <li><a href="code01.html">TextRank算法</a></li>
           <li><a href="code02.html">Servlet+Tomcat</a></li>
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
+		  <li><a href="">待开发1</a></li>
+		  <li><a href="">待开发2</a></li>
         </ul>
       </li>
       <li><a >我的影视</a>
-        <ul class="sub-nav">
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
+		<ul class="sub-nav">
+		  <li><a href="anime01.html">动漫</a></li>
+		  <li><a href="movie01.html">悬疑</a></li>
+		  <li><a href="">待开发3</a></li>
+		  <li><a href="">待开发4</a></li>
         </ul>
       </li>
 	  <li><a >我的游戏</a>
@@ -81,15 +79,41 @@
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_con" style="text-align:center;">
-		<!--content start-->
-		<center>
-		</center>
-        <br>
-		<!--content end-->
-        </div>
-    </div>
+	  
+	  <center>
+	  <br>
+	  <h2>狐妖小红娘</h2>
+	  <div class="news_about" style="text-align:center;">根据古典小说记载，世上有人有妖，妖会与人相恋，妖寿命千年，人的寿命有限，人死了，
+	  妖活着。人会投胎转世，但投胎以后不记得上辈子的爱。妖如果痴情的话，就去找狐妖“购买”一项服务，让投胎转世的人回忆起前世的爱……狐妖红娘这个角色就为此而诞生。
+	  作品主要讲述了以红娘为职业的狐妖，在为前世恋人牵红线的过程中发生的一系列有趣、神秘的故事。
+	  </div>
+	  <img alt="" src="images/tv/huyao02.jpg"><br>
+	  <div class="news_con" style="text-align:center;">
+		现在就看，B站链接：<a href="https://www.bilibili.com/bangumi/media/md2543/" target="_blank">https://www.bilibili.com/bangumi/media/md2543/</a>
+		<br>歌单网易云链接：<a href="https://music.163.com/playlist?id=2259687048&userid=1361628799" target="_blank">https://music.163.com/playlist?id=2259687048&userid=1361628799</a>
+		<br>《白月初你到底行不行》：<a href="https://www.bilibili.com/video/av19398013" target="_blank">https://www.bilibili.com/video/av19398013</a>
+      </div>
+	  <br/>
+	  
+	  <hr style="height:12px;border:none;border-top:5px groove skyblue;" />
+	  <br>
+	  <h2>一人之下</h2>
+	  <div class="news_about" style="text-align:center;">这个世界是存在异人的。 张楚岚就是一个隐藏在普通人中的异人。
+	  在生命的前19年中，他一直小心隐藏着自己和别人的不同。直到有一天，神秘少女冯宝宝找上了他。
+	  从此他被活尸追，被怪人砍，被卷入了前所未见的麻烦之中……
+	  </div>
+	  <img alt="" src="images/tv/yiren02.jpg"><br>
+	  <div class="news_con" style="text-align:center;">
+		现在就看，B站链接：<a href="https://www.bilibili.com/bangumi/media/md5050" target="_blank">https://www.bilibili.com/bangumi/media/md5050</a>
+		<br>歌单网易云链接：<a href="https://music.163.com/playlist?id=2259631806&userid=1361628799" target="_blank">https://music.163.com/playlist?id=2259631806&userid=1361628799</a>
+      </div>
+      <br>
+	  <div style="text-align:center;font-family:NSimSun;font-size:2;color:#D3D3D3;">
+		转到【关于我】页面，关注我的微信公众号，回复【狐妖】或【一人之下】即可获得漫画资源。<br>
+		资源来源于二次元集结地漫画福利，获取更多二次元漫画资源敬请关注二次元集结地漫画福利。
+      </div>
+	</div>
+	</center>
     <div class="nextinfo">
       <p>上一篇：<a>无</a></p>
       <p>下一篇：<a >无</a></p>
@@ -101,17 +125,14 @@
     <div class="cloud">
       <h2 class="hometitle">标签云</h2>
       <ul>
-        <a href="poem01.html">遇见花开</a>
-		<a href="poem02.html">人生如梦</a> 
-		<a href="poem51.html">还记得</a>
-        <a href="poem54.html">静夜思</a> 
-        <a href="poem31.html">埋葬柔情</a> 
-		<a href="poem61.html">一一〇七</a> 
-		<a href="poem44.html">每一句都是谎言</a> 
-		<a href="poem4.html">不诉离殇</a>
-		<a href="poem5.html">孤单成瘾</a>
-		<a href="poem42.html">鱼水情</a>
-		<a href="poem43.html">捉迷藏</a>
+        <a >涂山苏苏</a>
+        <a >涂山红红</a>
+        <a >涂山容容</a>
+        <a >东方月初</a>
+        <a >王权富贵</a>
+        <a >清瞳</a>
+        <a >宝儿姐</a>
+        <a >张楚岚</a>
       </ul>
     </div>
     <div class="guanzhu" id="float">
