--- a/poem44.html
+++ b/poem44.html
@@ -34,18 +34,16 @@
         <ul class="sub-nav">
           <li><a href="code01.html">TextRank算法</a></li>
           <li><a href="code02.html">Servlet+Tomcat</a></li>
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
+		  <li><a href="">待开发1</a></li>
+		  <li><a href="">待开发2</a></li>
         </ul>
       </li>
       <li><a >我的影视</a>
-        <ul class="sub-nav">
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
+		<ul class="sub-nav">
+		  <li><a href="anime01.html">动漫</a></li>
+		  <li><a href="movie01.html">悬疑</a></li>
+		  <li><a href="">待开发3</a></li>
+          <li><a href="">待开发4</a></li>
         </ul>
       </li>
 	  <li><a >我的游戏</a>
