--- a/movie01.html
+++ b/movie01.html
@@ -317,14 +317,23 @@
     <div class="cloud">
       <h2 class="hometitle">标签云</h2>
       <ul>
-        <a >涂山苏苏</a>
-        <a >涂山红红</a>
-        <a >涂山容容</a>
-        <a >东方月初</a>
-        <a >王权富贵</a>
-        <a >清瞳</a>
-        <a >宝儿姐</a>
-        <a >张楚岚</a>
+        <a >致命魔术</a>
+        <a >心迷宫</a>
+        <a >暴裂无声</a>
+        <a >神探夏洛克</a>
+        <a >万能钥匙</a>
+        <a >控方证人</a>
+        <a >穆赫兰道</a>
+        <a >前目的地</a>
+        <a >蝴蝶效应</a>
+        <a >嫌疑犯X的献身</a>
+        <a >惊天魔盗团</a>
+        <a >看不见的客人</a>
+        <a >搏击俱乐部</a>
+        <a >记忆碎片</a>
+        <a >恐怖直播</a>
+        <a >玩命记忆</a>
+        <a >消失的爱人</a>
       </ul>
     </div>
     <div class="guanzhu" id="float">
