--- a/index.html
+++ b/index.html
@@ -270,28 +270,26 @@
       </ul>
     </div>
   
-    <div class="cloud">
-      <h2 class="hometitle">标签云</h2>
-      <ul>
-        <a href="poem01.html">遇见花开</a>
-		<a href="poem02.html">人生如梦</a> 
-		<a href="poem51.html">还记得</a>
-        <a href="poem54.html">静夜思</a> 
-        <a href="poem31.html">埋葬柔情</a> 
-		<a href="poem61.html">一一〇七</a> 
-		<a href="poem44.html">每一句都是谎言</a> 
-		<a href="poem4.html">不诉离殇</a>
-		<a href="poem5.html">孤单成瘾</a>
-		<a href="poem42.html">鱼水情</a>
-		<a href="poem43.html">捉迷藏</a>
-	  </ul>
-    </div>
-    <div class="links">
-      <h2 class="hometitle">友情链接</h2>
-      <ul>
-        <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a></li>
+	<div class="tuijian">
+      <h2 class="hometitle">影视推荐</h2>
+      <ul class="tjpic">
+        <i><img src="images/tv/huyao01.jpg"></i>
+        <p><a href="anime01.html">狐妖小红娘</a></p>
+      </ul>
+      <ul class="tjpic">
+        <i><img src="images/tv/yiren01.jpg"></i>
+        <p><a href="anime01.html">一人之下</a></p>
+      </ul>
+      <ul class="tjpic">
+        <i><img src="images/tv/zhimingmoshu.jpg"></i>
+        <p><a href="movie01.html">致命魔术</a></p>
+      </ul>
+	  <ul class="tjpic">
+        <i><img src="images/tv/shentanxialuoke.jpg"></i>
+        <p><a href="movie01.html">神探夏洛克</a></p>
       </ul>
     </div>
+  
     <div class="guanzhu" id="float">
       <h2 class="hometitle">关注我 么么哒！</h2>
       <ul>
