--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@
     <div class="zhuanti">
       <h2 class="hometitle">我的游戏</h2>
       <ul>
-        <li> <i><img src="images/game/lol0.jpg"></i>
+        <li> <a href="lol01.html"><i><img src="images/game/lol0.jpg"></i></a>
           <p>英雄联盟<span><a href="lol01.html">看一看</a></span> </p>
         </li>
-        <li> <i><img src="images/game/ow0.jpg"></i>
+        <li> <a href="ow01.html"><i><img src="images/game/ow0.jpg"></i></a>
           <p>守望先锋 <span><a href="ow01.html">看一看</a></span></p>
         </li>
-        <li> <i><img src="images/game/pubg0.jpg"></i>
+        <li> <a href="pubg01.html"><i><img src="images/game/pubg0.jpg"></i></a>
           <p>绝地求生<span><a href="pubg01.html">看一看</a></span></p>
         </li>
       </ul>
@@ -273,19 +273,19 @@
 	<div class="tuijian">
       <h2 class="hometitle">影视推荐</h2>
       <ul class="tjpic">
-        <i><img src="images/tv/huyao01.jpg"></i>
+        <i><a href="anime01.html"><img src="images/tv/huyao01.jpg"></a></i>
         <p><a href="anime01.html">狐妖小红娘</a></p>
       </ul>
       <ul class="tjpic">
-        <i><img src="images/tv/yiren01.jpg"></i>
+        <i><a href="anime01.html"><img src="images/tv/yiren01.jpg"></a></i>
         <p><a href="anime01.html">一人之下</a></p>
       </ul>
       <ul class="tjpic">
-        <i><img src="images/tv/zhimingmoshu.jpg"></i>
+        <i><a href="movie01.html"><img src="images/tv/zhimingmoshu.jpg"></a></i>
         <p><a href="movie01.html">致命魔术</a></p>
       </ul>
 	  <ul class="tjpic">
-        <i><img src="images/tv/shentanxialuoke.jpg"></i>
+        <i><a href="movie01.html"><img src="images/tv/shentanxialuoke.jpg"></a></i>
         <p><a href="movie01.html">神探夏洛克</a></p>
       </ul>
     </div>
