--- a/anime01.html
+++ b/anime01.html
@@ -88,14 +88,14 @@
 	  作品主要讲述了以红娘为职业的狐妖，在为前世恋人牵红线的过程中发生的一系列有趣、神秘的故事。
 	  </div>
 	  <img alt="" src="images/tv/huyao02.jpg"><br>
-	  <div class="news_con" style="text-align:center;">
+	  <div id="yrzx" class="news_con" style="text-align:center;">
 		现在就看，B站链接：<a href="https://www.bilibili.com/bangumi/media/md2543/" target="_blank">https://www.bilibili.com/bangumi/media/md2543/</a>
 		<br>歌单网易云链接：<a href="https://music.163.com/playlist?id=2259687048&userid=1361628799" target="_blank">https://music.163.com/playlist?id=2259687048&userid=1361628799</a>
 		<br>《白月初你到底行不行》：<a href="https://www.bilibili.com/video/av19398013" target="_blank">https://www.bilibili.com/video/av19398013</a>
       </div>
 	  <br/>
 	  
-	  <hr style="height:12px;border:none;border-top:5px groove skyblue;" />
+	  <hr id="yrzx" style="height:12px;border:none;border-top:5px groove skyblue;" />
 	  <br>
 	  <h2>一人之下</h2>
 	  <div class="news_about" style="text-align:center;">这个世界是存在异人的。 张楚岚就是一个隐藏在普通人中的异人。
