--- a/index.html
+++ b/index.html
@@ -277,16 +277,16 @@
         <p><a href="anime01.html">狐妖小红娘</a></p>
       </ul>
       <ul class="tjpic">
-        <i><a href="anime01.html"><img src="images/tv/yiren01.jpg"></a></i>
-        <p><a href="anime01.html">一人之下</a></p>
+        <i><a href="anime01.html#yrzx"><img src="images/tv/yiren01.jpg"></a></i>
+        <p><a href="anime01.html#yrzx">一人之下</a></p>
       </ul>
       <ul class="tjpic">
         <i><a href="movie01.html"><img src="images/tv/zhimingmoshu.jpg"></a></i>
         <p><a href="movie01.html">致命魔术</a></p>
       </ul>
 	  <ul class="tjpic">
-        <i><a href="movie01.html"><img src="images/tv/shentanxialuoke.jpg"></a></i>
-        <p><a href="movie01.html">神探夏洛克</a></p>
+        <i><a href="movie01.html#stxlk"><img src="images/tv/shentanxialuoke.jpg"></a></i>
+        <p><a href="movie01.html#stxlk">神探夏洛克</a></p>
       </ul>
     </div>
   
