--- a/poem62.html
+++ b/poem62.html
@@ -81,7 +81,7 @@
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
 		<div class="news_about" style="text-align:center;">曲：KOKIA-ありがとう<br>
-		词：KOKIA&文青<br>
+		中文填词：文青<br>
 		第一行是日文歌词<br>
 		第二行是中文歌词<br></div>
 		<br>
