--- a/poem01.html
+++ b/poem01.html
@@ -72,7 +72,7 @@
       <div class="bloginfo">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">追忆</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
