--- a/poem43.html
+++ b/poem43.html
@@ -82,7 +82,7 @@
 		<!--content start-->
         
 		<div class="news_about" style="text-align:center;">一。灰膏墙，柳伴杨，青石板，泥土巷</div>
-		巷头渠水轻轻流
+		巷头渠水轻轻流<br>
 		清澈如你明眸<br>
 		谁家的女儿不知羞<br>
 		一双玉足浣水流<br>
