--- a/movie01.html
+++ b/movie01.html
@@ -73,7 +73,7 @@
       <div class="bloginfo">
         <ul>
           <li class="author">江南无蝶</li>
-          <li class="lmname">动漫</li>
+          <li class="lmname">悬疑</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
