--- a/poem0.html
+++ b/poem0.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>孤单成瘾</title>
+<title>待成追忆</title>
 <link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -26,7 +26,7 @@
       <li><a >我的诗</a>
         <ul class="sub-nav">
           <li><a href="poem0.html">待成追忆</a></li>
-          <li><a href="poem4.html">不诉离殇</a></li>
+          <li><a href="poem4.html">待成追忆</a></li>
           <li><a href="poem5.html">孤单成瘾</a></li>
           <li><a href="poem61.html">一一〇七</a></li>
           <li><a href="poem62.html">泪的告白</a></li>
@@ -64,20 +64,22 @@
 </header>
 <div class="pagebg sh"></div>
 <div class="container">
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 孤单成瘾</span><a href="" class="n1">网站首页</a><a href="" class="n2">孤单成瘾</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 待成追忆</span><a href="" class="n1">网站首页</a><a href="" class="n2">待成追忆</a></h1>
   <!--blogsbox begin-->
   <div class="blogsbox">
   
     <div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem51.html" >还记得</a></h3>
-      <span class="blogpic"><a href="poem51.html" title=""><img src="images/poem/51.jpg" alt=""></a></span>
-      <p class="blogtext">街角的路灯把我们的影子轻轻摇晃<br>
-		学校对面的奶茶店还悠悠的飘着奶香<br>
-		老旧的屋檐上滴下的雨叮咚作响<br></p>
+      <h3 class="blogtitle"><a href="poem01.html" >遇见花开</a></h3>
+      <span class="blogpic"><a href="poem01.html" title=""><img src="images/poem/01.jpg" alt=""></a></span>
+      <p class="blogtext">黑暗的楼廊
+		<br>
+		我独自凝望
+		<br>
+		没有脚步的声响</p>
       <div class="bloginfo">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">孤单成瘾</li>
+          <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -86,16 +88,34 @@
     </div>
 	
 	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem52.html" >能够遗忘，才不悲伤</a></h3>
-      <span class="blogpic"><a href="poem52.html" title=""><img src="images/poem/52.jpg" alt=""></a></span>
-      <p class="blogtext">云朵四处游荡<br>
-		月亮大放光芒<br>
-		人山人海中<br>
-		我一个人嚣张<br></p>
+      <h3 class="blogtitle"><a href="poem02.html" >人生如梦</a></h3>
+      <span class="blogpic"><a href="poem02.html" title=""><img src="images/poem/02.jpg" alt=""></a></span>
+      <p class="blogtext">时光的流转
+        <br>
+		仿佛木马一般
+        <br>
+		轮回几十番</p>
       <div class="bloginfo">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">孤单成瘾</li>
+          <li class="lmname">待成追忆</li>
+          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="view">99已阅读</li>
+          <li class="like">99</li>
+        </ul>
+      </div>
+    </div>
+	
+	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+      <h3 class="blogtitle"><a href="poem21.html" >七色花</a></h3>
+      <span class="blogpic"><a href="poem21.html" title=""><img src="images/poem/21.jpg" alt=""></a></span>
+      <p class="blogtext">上天赐我一朵七色花 <br>
+		让美丽的愿望许在花季<br>
+		红色许世界和平 <br></p>
+      <div class="bloginfo">
+        <ul>
+          <li class="author">文青</li>
+          <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -104,15 +124,15 @@
     </div>
 	
     <div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem53.html" >情圣</a></h3>
-      <span class="blogpic"><a href="poem53.html" title=""><img src="images/poem/53.jpg" alt=""></a></span>
-      <p class="blogtext">你有舞风弄月的天赋<br>
-		你是万马千军的坟墓<br>
-		你用烽火戏诸侯<br></p>
+      <h3 class="blogtitle"><a href="poem31.html" >埋葬柔情</a></h3>
+      <span class="blogpic"><a href="poem31.html" title=""><img src="images/poem/31.jpg" alt=""></a></span>
+      <p class="blogtext">你决绝的脚步
+		<br>是我心的桎梏
+		<br>西山的日暮</p>
       <div class="bloginfo">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">孤单成瘾</li>
+          <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -121,34 +141,15 @@
     </div>
 	
 	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem54.html" >静夜思</a></h3>
-      <span class="blogpic"><a href="poem54.html" title=""><img src="images/poem/54.jpg" alt=""></a></span>
-      <p class="blogtext">你说给我听的情话<br>
-		给了我一个天下<br>
-		你走了 这天下坍塌<br>
-		海角淹没了天涯<br></p>
+      <h3 class="blogtitle"><a href="poem32.html" >塞北少孽</a></h3>
+      <span class="blogpic"><a href="poem32.html" title=""><img src="images/poem/32.jpg" alt=""></a></span>
+      <p class="blogtext">乌云斜风乱雨，疏叶梧桐<br>
+		同学可不可以，抬头挺胸<br>
+		请你不要不要，脸颊羞红<br></p>
       <div class="bloginfo">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">孤单成瘾</li>
-          <li class="timer">2000-00-00 00:00:00</li>
-          <li class="view">99已阅读</li>
-          <li class="like">99</li>
-        </ul>
-      </div>
-    </div>
-	
-	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem55.html" >造化弄人</a></h3>
-      <span class="blogpic"><a href="poem55.html" title=""><img src="images/poem/55.jpg" alt=""></a></span>
-      <p class="blogtext">三生石旁的擦肩<br>
-		梧桐树的那面<br>
-		月老牵错了谁的红线<br>
-		乱点了姻缘<br></p>
-      <div class="bloginfo">
-        <ul>
-          <li class="author">文青</li>
-          <li class="lmname">孤单成瘾</li>
+          <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -162,11 +163,14 @@
     <div class="zhuanti">
       <h2 class="hometitle">特别推荐</h2>
       <ul>
-        <li> <i><img src="images/poem/51.jpg"></i>
-          <p>还记得 <span><a href="poem51.html">阅读</a></span> </p>
+        <li> <i><img src="images/poem/01.jpg"></i>
+          <p>遇见花开 <span><a href="poem01.html">阅读</a></span> </p>
         </li>
-        <li> <i><img src="images/poem/54.jpg"></i>
-          <p>静夜思<span><a href="poem/54.html">阅读</a></span></p>
+        <li> <i><img src="images/poem/02.jpg"></i>
+          <p>人生如梦<span><a href="poem02.html">阅读</a></span></p>
+        </li>
+        <li> <i><img src="images/poem/31.jpg"></i>
+          <p>埋葬柔情<span><a href="poem31.html">阅读</a></span></p>
         </li>
       </ul>
     </div>
@@ -180,7 +184,7 @@
         <a href="poem31.html">埋葬柔情</a> 
 		<a href="poem61.html">一一〇七</a> 
 		<a href="poem44.html">每一句都是谎言</a> 
-		<a href="poem4.html">不诉离殇</a>
+		<a href="poem4.html">待成追忆</a>
 		<a href="poem5.html">孤单成瘾</a>
 		<a href="poem42.html">鱼水情</a>
 		<a href="poem43.html">捉迷藏</a>
