--- a/poem02.html
+++ b/poem02.html
@@ -25,9 +25,7 @@
       <li><a href="index.html">我的首页</a> </li>
       <li><a >我的诗</a>
         <ul class="sub-nav">
-          <li><a href="poem01.html">遇见花开</a></li>
-          <li><a href="poem02.html">人生如梦</a></li>
-          <li><a href="poem31.html">埋葬柔情</a></li>
+          <li><a href="poem0.html">待成追忆</a></li>
           <li><a href="poem4.html">不诉离殇</a></li>
           <li><a href="poem5.html">孤单成瘾</a></li>
           <li><a href="poem61.html">一一〇七</a></li>
@@ -72,7 +70,7 @@
       <div class="bloginfo">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">追忆</li>
+          <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
