--- a/poem21.html
+++ b/poem21.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>如同</title>
+<title>七色花</title>
 <link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -63,44 +63,57 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 如同</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 七色花</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">如同</h3>
-      <div class="bloginfo" style="text-align:center;">
+      <h3 class="news_title" style="text-align:center;">七色花</h3>
+      <div class="bloginfo">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">不诉离殇</li>
+          <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
+ 
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
+        <br>
+        上天赐我一朵七色花 <br>
+		让美丽的愿望许在花季<br>
 		<br>
-		遇见你如同遇见一场马拉松<br>
-		加速的心拥有了魔鬼的冲动<br>
+		红色许世界和平 <br>
+		愿天下不再有流血和生气 <br>
+		橙色许阳光永存<br>
+		愿温暖洋溢生命中的缝隙<br>
 		<br>
-		恋上你如同恋上一朵罂粟花<br>
-		让我在缭绕的花香中苦苦挣扎<br>
+		黄色许积极向上 <br>
+		腐朽与堕落都化为神奇<br>
+		绿色许春回大地 <br>
+		愿每一捧泥土都蕴藏着勃勃生机<br>
 		<br>
-		想念你如同想念一轮满月<br>
-		把忧伤化作满地明媚的雪<br>
+		青涩许成熟稳重 <br>
+		愿处事果断干练不会带泥 <br>
+		蓝色许天明海净 <br>
+		愿我们可以拥有最干净的呼吸<br>
 		<br>
-		忘记你如同忘记一场秋雨<br>
-		颓圮的大地上不着落一丝痕迹<br>
+		最后一片留给你 <br>
+		许下一个紫色的梦噫 <br>
+		愿我们永生永世<br>
+		永不分离<br>
+		<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/48.jpg"><br>
+        <img alt="" src="images/poem/21.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem47.html" title="那时红颜">那时红颜</a></p>
-      <p>下一篇：<a href="poem49.html" title="太阳坠落">太阳坠落</a></p>
+      <p>上一篇：<a>无</a></p>
+      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
       <p> </p>
       <p> </p>
     </div>
