--- a/poem32.html
+++ b/poem32.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>如同</title>
+<title>塞北少孽</title>
 <link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -63,44 +63,65 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 如同</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 塞北少孽</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">如同</h3>
-      <div class="bloginfo" style="text-align:center;">
+      <h3 class="news_title" style="text-align:center;">塞北少孽</h3>
+      <div class="bloginfo">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">不诉离殇</li>
+          <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
+ 
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-		<br>
-		遇见你如同遇见一场马拉松<br>
-		加速的心拥有了魔鬼的冲动<br>
-		<br>
-		恋上你如同恋上一朵罂粟花<br>
-		让我在缭绕的花香中苦苦挣扎<br>
-		<br>
-		想念你如同想念一轮满月<br>
-		把忧伤化作满地明媚的雪<br>
-		<br>
-		忘记你如同忘记一场秋雨<br>
-		颓圮的大地上不着落一丝痕迹<br>
-		<br>
-		<center>
-        <img alt="" src="images/poem/48.jpg"><br>
-		</center>
         <br>
+		乌云斜风乱雨，疏叶梧桐<br>
+		同学可不可以，抬头挺胸<br>
+		请你不要不要，脸颊羞红<br>
+		在下不过是想，拜见尊容<br>
+		<br>
+		姑娘慢些跑<br>
+		化蝶寻花栖芳草<br>
+		邂逅相遇愿追随海角<br>
+		执子之手蓦然想到要偕老<br>
+		<br>
+		怀里好乖巧<br>
+		撒娇撅嘴像只猫<br>
+		前世可曾有过被猫咬<br>
+		你说没有莫有米有米妖喵~<br>
+		<br>
+		桌案添红袖<br>
+		唇香绕齿柔<br>
+		细雨微风面<br>
+		臂弯枕床头<br>
+		<br>
+		枝头两鸟欢叫<br>
+		池中鸳鸯尚小<br>
+		葡萄架下我将你拥抱<br>
+		戏说着牛郎织女也不会有如此美妙<br>
+		<br>
+		星月流光皎洁<br>
+		百姓人家灯灭<br>
+		陪我这只妖孽<br>
+		共度良宵一夜<br>
+		<br>
+		怎样过这光景<br>
+		去等待一年后的黎明<br>
+		届时在下会拜领<br>
+		小姐你的芳心<br>
+		<br>
+		<br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem47.html" title="那时红颜">那时红颜</a></p>
-      <p>下一篇：<a href="poem49.html" title="太阳坠落">太阳坠落</a></p>
+      <p>上一篇：<a>无</a></p>
+      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
       <p> </p>
       <p> </p>
     </div>
