--- a/poem0.html
+++ b/poem0.html
@@ -26,7 +26,7 @@
       <li><a >我的诗</a>
         <ul class="sub-nav">
           <li><a href="poem0.html">待成追忆</a></li>
-          <li><a href="poem4.html">待成追忆</a></li>
+          <li><a href="poem4.html">不诉离殇</a></li>
           <li><a href="poem5.html">孤单成瘾</a></li>
           <li><a href="poem61.html">一一〇七</a></li>
           <li><a href="poem62.html">泪的告白</a></li>
