--- a/poem02.html
+++ b/poem02.html
@@ -127,7 +127,7 @@
     </div>
     <div class="nextinfo">
       <p>上一篇：<a href="poem01.html" title="遇见花开">遇见花开</a></p>
-      <p>下一篇：<a href="poem31.html" title="埋葬柔情">埋葬柔情</a></p>
+      <p>下一篇：<a href="poem21.html" title="七色花">七色花</a></p>
       <p> </p>
       <p> </p>
     </div>
