--- a/poem31.html
+++ b/poem31.html
@@ -123,7 +123,7 @@
     </div>
     <div class="nextinfo">
       <p>上一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
-      <p>下一篇：<a href="poem41.html" title="秋殇">秋殇</a></p>
+      <p>下一篇：<a href="poem32.html" title="塞北少孽">塞北少孽</a></p>
       <p> </p>
       <p> </p>
     </div>
