--- a/poem32.html
+++ b/poem32.html
@@ -120,8 +120,8 @@
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem31.html" title="埋葬柔情">埋葬柔情</a></p>
+      <p>下一篇：<a href="poem41.html" title="秋殇">秋殇</a></p>
       <p> </p>
       <p> </p>
     </div>
