--- a/poem51.html
+++ b/poem51.html
@@ -97,7 +97,7 @@
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem49.html" title="太阳坠落">太阳坠落</a></p>
+      <p>上一篇：<a href="poem40.html" title="指尖沙">指尖沙</a></p>
       <p>下一篇：<a href="poem52.html" title="能够遗忘，才不悲伤">能够遗忘，才不悲伤</a></p>
       <p> </p>
       <p> </p>
