--- a/poem21.html
+++ b/poem21.html
@@ -112,8 +112,8 @@
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>下一篇：<a href="poem31.html" title="埋葬柔情">埋葬柔情</a></p>
       <p> </p>
       <p> </p>
     </div>
