--- a/poem4.html
+++ b/poem4.html
@@ -227,6 +227,24 @@
       </div>
     </div>
 	
+	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+      <h3 class="blogtitle"><a href="poem40.html" >指尖沙</a></h3>
+      <span class="blogpic"><a href="poem40.html" title=""><img src="images/poem/40.jpg" alt=""></a></span>
+      <p class="blogtext">指间的沙<br>
+		风不吹也会落下<br>
+		沙面的画<br>
+		水不冲也会抹擦<br></p>
+      <div class="bloginfo">
+        <ul>
+          <li class="author">文青</li>
+          <li class="lmname">不诉离殇</li>
+          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="view">99已阅读</li>
+          <li class="like">99</li>
+        </ul>
+      </div>
+    </div>
+	
   </div>
   <!--blogsbox end-->
   <div class="sidebar">
