--- a/poem40.html
+++ b/poem40.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>太阳坠落</title>
+<title>指尖沙</title>
 <link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -63,10 +63,10 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 太阳坠落</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 指尖沙</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">太阳坠落</h3>
+      <h3 class="news_title" style="text-align:center;">指尖沙</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
@@ -79,46 +79,44 @@
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
 		<br>
-		如果太阳流星般坠落<br>
-		我的世界会变成什么<br>
-		黑夜与孤独包围着我<br>
-		还有数不完的星星和寂寞<br>
+		指间的沙<br>
+		风不吹也会落下<br>
+		沙面的画<br>
+		水不冲也会抹擦<br>
+		画中的马<br>
+		鞭不打也会天涯<br>
+		马上的她<br>
+		雨不染也会妆花<br>
 		<br>
-		夜里北极星在闪烁<br>
-		南方大地如此的辽阔<br>
-		自从你走了之后<br>
-		就再也没有回来过<br>
+		山上的塔<br>
+		雾不遮也不闻敲打<br>
+		塔顶的霞<br>
+		日不落也不见幻化<br>
+		霞边的牙<br>
+		玉不圆也不觉寒煞<br>
+		月影的她<br>
+		泪会滴下也不被牵挂<br>
 		<br>
-		我到底做错了什么<br>
-		让你如此的冷漠<br>
-		还记得当年信誓旦旦<br>
-		我们许下的承诺<br>
-		<br>
-		爱不应该被挥霍<br>
-		可我一直都执着<br>
-		现在你又在哪呢<br>
-		又是否会想我<br>
-		<br>
-		耀眼的流星从天边划过<br>
-		最真诚的愿望许下一个<br>
-		宁愿明天再见不到阳光的颜色<br>
-		也要让北极星指引着你找到我<br>
-		<br>
-		当太阳流星般坠落<br>
-		我的世界会变成什么<br>
-		惟清风与我<br>
-		共赏着凄凉的月色<br>
+		那时的家<br>
+		礼会结却无处安扎<br>
+		家中的瓦<br>
+		雪会化却难有嘀嗒<br>
+		瓦缝的花<br>
+		影会乱却没有人碎踏<br>
+		花影的她<br>
+		会褪去灰色的魔法<br>
+		却没有人惜这芳华<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/49.jpg"><br>
+        <img alt="" src="images/poem/40.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem48.html" title="如同">如同</a></p>
-      <p>下一篇：<a href="poem40.html" title="指尖沙">指尖沙</a></p>
+      <p>上一篇：<a href="poem49.html" title="太阳坠落">太阳坠落</a></p>
+      <p>下一篇：<a href="poem51.html" title="还记得">还记得</a></p>
       <p> </p>
       <p> </p>
     </div>
